force-app/main/default/objects/Lead/fields/Accepts_unsolicited_proposals__c.field-meta.xml
<CustomField>
    <fullName>Accepts_unsolicited_proposals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepts unsolicited proposals</label>
    <type>Checkbox</type>
</CustomField>