force-app/main/default/objects/Lead/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <formula>IF(
  CONTAINS(Street, MID($Setup.Global__c.CRLF__c, 3, 1)),
  LEFT(Street, FIND(MID($Setup.Global__c.CRLF__c, 3, 1), Street) - 1),
  Street
)</formula>
    <label>Address Line 1</label>
    <type>Text</type>
</CustomField>