force-app/main/default/objects/Lead/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <formula>IF(
  CONTAINS(Street, MID($Setup.Global__c.CRLF__c, 3, 1)),
  MID(
    Street,
    FIND(MID($Setup.Global__c.CRLF__c, 3, 1), Street) + 1,
    LEN(Street)
  ),
  &quot;&quot;
)</formula>
    <label>Address Line 2</label>
    <type>Text</type>
</CustomField>