force-app/main/default/objects/Lead/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(ISBLANK(  Birthdate__c ),
NULL,
FLOOR((TODAY() -  Birthdate__c ) / 365.25)
)</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>