force-app/main/default/objects/Lead/fields/Anticipated_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Funding_Amount__c</fullName>
    <label>Anticipated Funding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>