force-app/main/default/objects/Lead/fields/Applicant_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Benefits__c</fullName>
    <label>Applicant Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplemental Security Income (SSI)</fullName>
            </value>
            <value>
                <fullName>Social Security Disability Insurance (SSDI)</fullName>
            </value>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>HUD/Section 8 Housing</fullName>
            </value>
            <value>
                <fullName>Food Stamps/Vision Card</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid or Working Healthy</fullName>
            </value>
            <value>
                <fullName>Preneed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>