force-app/main/default/objects/Lead/fields/Call_Attempt_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt_Notes__c</fullName>
    <label>Call Attempt Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>