force-app/main/default/objects/Lead/fields/Disability_Designation__c.field-meta.xml
<CustomField>
    <fullName>Disability_Designation__c</fullName>
    <label>Disability Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amputation</fullName>
            </value>
            <value>
                <fullName>Attention deficit hyperactivity disorder (ADHD)</fullName>
            </value>
            <value>
                <fullName>Autism spectrum</fullName>
            </value>
            <value>
                <fullName>Autoimmune</fullName>
            </value>
            <value>
                <fullName>Behavior Disorder</fullName>
            </value>
            <value>
                <fullName>Bipolar</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cerebral palsy</fullName>
            </value>
            <value>
                <fullName>Cystic fibrosis</fullName>
            </value>
            <value>
                <fullName>Deaf or hard hearing</fullName>
            </value>
            <value>
                <fullName>Developmental disability</fullName>
            </value>
            <value>
                <fullName>Down Syndrome</fullName>
            </value>
            <value>
                <fullName>Epilepsy</fullName>
            </value>
            <value>
                <fullName>Fibromyalgia</fullName>
            </value>
            <value>
                <fullName>Intellectual and developmental disability (IDD)</fullName>
            </value>
            <value>
                <fullName>Mental health</fullName>
            </value>
            <value>
                <fullName>Multiple sclerosis (MS)</fullName>
            </value>
            <value>
                <fullName>Muscular dystrophy</fullName>
            </value>
            <value>
                <fullName>Musculoskeletal</fullName>
            </value>
            <value>
                <fullName>Neurological</fullName>
            </value>
            <value>
                <fullName>Obsessive compulsive disorder (OCD)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physical disability</fullName>
            </value>
            <value>
                <fullName>Post-traumatic stress disorder (PTSD)</fullName>
            </value>
            <value>
                <fullName>Schizophrenia</fullName>
            </value>
            <value>
                <fullName>Speech or language impairment</fullName>
            </value>
            <value>
                <fullName>Spinal cord injury</fullName>
            </value>
            <value>
                <fullName>Tourette syndrome</fullName>
            </value>
            <value>
                <fullName>Traumatic brain injury (TBI)</fullName>
            </value>
            <value>
                <fullName>Visual impairment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>