force-app/main/default/objects/Lead/fields/Employment_Income_per_month__c.field-meta.xml
<CustomField>
    <fullName>Employment_Income_per_month__c</fullName>
    <label>Employment Income (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>