force-app/main/default/objects/Lead/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Arcare Employee</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>