force-app/main/default/objects/Lead/fields/If_Other_enter_Referral__c.field-meta.xml
<CustomField>
    <fullName>If_Other_enter_Referral__c</fullName>
    <label>If Other, enter Referral</label>
    <type>TextArea</type>
</CustomField>