force-app/main/default/objects/Lead/fields/If_Other_enter_type_of_firm__c.field-meta.xml
<CustomField>
    <fullName>If_Other_enter_type_of_firm__c</fullName>
    <label>If Other, enter type of firm</label>
    <type>TextArea</type>
</CustomField>