force-app/main/default/objects/Lead/fields/If_yes_please_list_the_provider__c.field-meta.xml
<CustomField>
    <fullName>If_yes_please_list_the_provider__c</fullName>
    <label>If yes, please list the provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arcare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>