force-app/main/default/objects/Lead/fields/Lead_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Referrer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>