force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company/Firm</fullName>
            </value>
            <value>
                <fullName>Event/Presentation</fullName>
                <isActive>false</isActive>
                <label>Event/Presentation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>