force-app/main/default/objects/Lead/fields/Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Living_Situation__c</fullName>
    <label>Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Someone else&apos;s household</fullName>
            </value>
            <value>
                <fullName>Group care facility</fullName>
            </value>
            <value>
                <fullName>Skilled nursing facility</fullName>
            </value>
            <value>
                <fullName>Assisted living facility</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Institution, hospital, or nursing home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>