force-app/main/default/objects/Lead/fields/Representative_Payee__c.field-meta.xml
<CustomField>
    <fullName>Representative_Payee__c</fullName>
    <label>Representative Payee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>