force-app/main/default/objects/Lead/fields/Service_Requested__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested__c</fullName>
    <label>Service Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant Application</fullName>
            </value>
            <value>
                <fullName>Trust Administration</fullName>
            </value>
            <value>
                <fullName>Conservatorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>