force-app/main/default/objects/Lead/fields/Supervised_living_setting_Other__c.field-meta.xml
<CustomField>
    <fullName>Supervised_living_setting_Other__c</fullName>
    <label>Supervised living setting - Other</label>
    <length>150</length>
    <type>Text</type>
</CustomField>