force-app/main/default/objects/Lead/fields/Type_of_Firm__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Firm__c</fullName>
    <label>Type of Firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Firm</valueSetName>
    </valueSet>
</CustomField>