force-app/main/default/objects/Lead/validationRules/Enrollment_Packet_Sent_Email_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_Packet_Sent_Email_Alert</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status )=&quot;Enrollment Packet Sent&quot; &amp;&amp;  ISBLANK( Email )</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>This onboarding does not have a value on the Email field. To send the Enrollment Packet to the Beneficiary, a value must be entered.</errorMessage>
</ValidationRule>