force-app/main/default/objects/Lead/listViews/InternationalLeads_Lead.listView-meta.xml
<ListView>
    <fullName>InternationalLeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>International Leads</label>
    <queue>InternationalLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>