force-app/main/default/objects/Lead/listViews/USLeads_Lead.listView-meta.xml
<ListView>
    <fullName>USLeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>US Leads</label>
    <queue>USLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>